[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/GameTheme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/Griffy-Regular_32.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Sprites/symbols_levelselection_settings_credits_exit_restart_back.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]

atlas = ExtResource( 4 )
region = Rect2( 116, 4, 17, 17 )
margin = Rect2( 24, 0, 0, 0 )

[node name="SettingsMenu" type="VBoxContainer"]

visibility/visible = false
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 60.0
margin/right = -148.0
margin/bottom = 200.0
custom_constants/separation = 16
alignment = 0
script/script = ExtResource( 1 )

[node name="MenuTitle" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SoundVolumeLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 63.0
margin/right = 280.0
margin/bottom = 81.0
text = "Sound Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SoundVolumeSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 105.0
margin/right = 280.0
margin/bottom = 121.0
range/min = 0.0
range/max = 2.0
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 145.0
margin/right = 280.0
margin/bottom = 163.0
text = "Music Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MusicVolumeSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 187.0
margin/right = 280.0
margin/bottom = 203.0
range/min = 0.0
range/max = 2.0
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 227.0
margin/right = 280.0
margin/bottom = 230.0

[node name="EnableTips" type="CheckBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 254.0
margin/right = 280.0
margin/bottom = 277.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Enable in game tips"
flat = false
align = 0

[node name="FullScreen" type="CheckBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 254.0
margin/right = 280.0
margin/bottom = 277.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Fullscreen"
flat = false
align = 0

[node name="BackButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 301.0
margin/right = 280.0
margin/bottom = 327.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
icon = SubResource( 1 )
flat = false

[connection signal="value_changed" from="SoundVolumeSlider" to="." method="_on_SoundVolumeSlider_value_changed"]

[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]

[connection signal="toggled" from="EnableTips" to="." method="_on_EnableTips_toggled"]

[connection signal="toggled" from="FullScreen" to="." method="_on_FullScreen_toggled"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]


